tests/invalid/UnclosedBrace.java
class UnclosedBrace {
    private int n;

    public void bump() {
        n = n + 1;
    }
